--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,17 @@
-== README
+== Yelp Clone
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a Rails project I made to gain some experience with the framework. It has a few things that I learned newly for this project:
 
-Things you may want to cover:
+* Scaffolding in Rails
 
-* Ruby version
+* Using Bootstrap for fast front-end user experience
 
-* System dependencies
+* More extensive modeling and validations
 
-* Configuration
+* Callbacks in Rails models
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+* The Rails CRUD interface 
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+
+- Ethan Harris
